cctp_trader/cctp_trader.h

    API_EXPORT int ReqQryInstrumentCommissionRate(void* trader, CThostFtdcQryInstrumentCommissionRateField* pQryInstrumentCommissionRate, int nRequestID);
    API_EXPORT int ReqQryExchange(void* trader, CThostFtdcQryExchangeField* pQryExchange, int nRequestID);
    API_EXPORT int ReqQryProduct(void* trader, CThostFtdcQryProductField* pQryProduct, int nRequestID);
    API_EXPORT int ReqQryInstrument(void* trader, CThostFtdcQryInstrumentField* pQryInstrument, int nRequestID);
    API_EXPORT int ReqQryDepthMarketData(void* trader, CThostFtdcQryDepthMarketDataField* pQryDepthMarketData, int nRequestID);
    API_EXPORT int ReqQrySettlementInfo(void* trader, CThostFtdcQrySettlementInfoField* pQrySettlementInfo, int nRequestID);
    API_EXPORT int ReqQryTransferBank(void* trader, CThostFtdcQryTransferBankField* pQryTransferBank, int nRequestID);
    API_EXPORT int ReqQryInvestorPositionDetail(void* trader, CThostFtdcQryInvestorPositionDetailField* pQryInvestorPositionDetail, int nRequestID);
    API_EXPORT int ReqQryNotice(void* trader, CThostFtdcQryNoticeField* pQryNotice, int nRequestID);
    API_EXPORT int ReqQrySettlementInfoConfirm(void* trader, CThostFtdcQrySettlementInfoConfirmField* pQrySettlementInfoConfirm, int nRequestID);
    API_EXPORT int ReqQryInvestorPositionCombineDetail(void* trader, CThostFtdcQryInvestorPositionCombineDetailField* pQryInvestorPositionCombineDetail, int nRequestID);
    API_EXPORT int ReqQryCFMMCTradingAccountKey(void* trader, CThostFtdcQryCFMMCTradingAccountKeyField* pQryCFMMCTradingAccountKey, int nRequestID);
    API_EXPORT int ReqQryEWarrantOffset(void* trader, CThostFtdcQryEWarrantOffsetField* pQryEWarrantOffset, int nRequestID);
    API_EXPORT int ReqQryInvestorProductGroupMargin(void* trader, CThostFtdcQryInvestorProductGroupMarginField* pQryInvestorProductGroupMargin, int nRequestID);
    API_EXPORT int ReqQryExchangeMarginRate(void* trader, CThostFtdcQryExchangeMarginRateField* pQryExchangeMarginRate, int nRequestID);
    API_EXPORT int ReqQryExchangeMarginRateAdjust(void* trader, CThostFtdcQryExchangeMarginRateAdjustField* pQryExchangeMarginRateAdjust, int nRequestID);
    API_EXPORT int ReqQryExchangeRate(void* trader, CThostFtdcQryExchangeRateField* pQryExchangeRate, int nRequestID);
    API_EXPORT int ReqQrySecAgentACIDMap(void* trader, CThostFtdcQrySecAgentACIDMapField* pQrySecAgentACIDMap, int nRequestID);
    API_EXPORT int ReqQryProductExchRate(void* trader, CThostFtdcQryProductExchRateField* pQryProductExchRate, int nRequestID);
    API_EXPORT int ReqQryProductGroup(void* trader, CThostFtdcQryProductGroupField* pQryProductGroup, int nRequestID);
    API_EXPORT int ReqQryMMInstrumentCommissionRate(void* trader, CThostFtdcQryMMInstrumentCommissionRateField* pQryMMInstrumentCommissionRate, int nRequestID);
    API_EXPORT int ReqQryMMOptionInstrCommRate(void* trader, CThostFtdcQryMMOptionInstrCommRateField* pQryMMOptionInstrCommRate, int nRequestID);
    API_EXPORT int ReqQryInstrumentOrderCommRate(void* trader, CThostFtdcQryInstrumentOrderCommRateField* pQryInstrumentOrderCommRate, int nRequestID);
    API_EXPORT int ReqQrySecAgentTradingAccount(void* trader, CThostFtdcQryTradingAccountField* pQryTradingAccount, int nRequestID);
    API_EXPORT int ReqQrySecAgentCheckMode(void* trader, CThostFtdcQrySecAgentCheckModeField* pQrySecAgentCheckMode, int nRequestID);
    API_EXPORT int ReqQrySecAgentTradeInfo(void* trader, CThostFtdcQrySecAgentTradeInfoField* pQrySecAgentTradeInfo, int nRequestID);
    API_EXPORT int ReqQryOptionInstrTradeCost(void* trader, CThostFtdcQryOptionInstrTradeCostField* pQryOptionInstrTradeCost, int nRequestID);
    API_EXPORT int ReqQryOptionInstrCommRate(void* trader, CThostFtdcQryOptionInstrCommRateField* pQryOptionInstrCommRate, int nRequestID);
    API_EXPORT int ReqQryExecOrder(void* trader, CThostFtdcQryExecOrderField* pQryExecOrder, int nRequestID);
    API_EXPORT int ReqQryForQuote(void* trader, CThostFtdcQryForQuoteField* pQryForQuote, int nRequestID);
    API_EXPORT int ReqQryQuote(void* trader, CThostFtdcQryQuoteField* pQryQuote, int nRequestID);
    API_EXPORT int ReqQryOptionSelfClose(void* trader, CThostFtdcQryOptionSelfCloseField* pQryOptionSelfClose, int nRequestID);
    API_EXPORT int ReqQryInvestUnit(void* trader, CThostFtdcQryInvestUnitField* pQryInvestUnit, int nRequestID);
    API_EXPORT int ReqQryCombInstrumentGuard(void* trader, CThostFtdcQryCombInstrumentGuardField* pQryCombInstrumentGuard, int nRequestID);
    API_EXPORT int ReqQryCombAction(void* trader, CThostFtdcQryCombActionField* pQryCombAction, int nRequestID);
    API_EXPORT int ReqQryTransferSerial(void* trader, CThostFtdcQryTransferSerialField* pQryTransferSerial, int nRequestID);
    API_EXPORT int ReqQryAccountregister(void* trader, CThostFtdcQryAccountregisterField* pQryAccountregister, int nRequestID);