CSharpCtp/TraderDllWrapper.cs

        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInstrumentCommissionRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInstrumentCommissionRate(IntPtr phandler, ref CThostFtdcQryInstrumentCommissionRateField pQryInstrumentCommissionRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryExchange",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryExchange(IntPtr phandler, ref CThostFtdcQryExchangeField pQryExchange, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryProduct",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryProduct(IntPtr phandler, ref CThostFtdcQryProductField pQryProduct, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInstrument",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInstrument(IntPtr phandler, ref CThostFtdcQryInstrumentField pQryInstrument, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryDepthMarketData",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryDepthMarketData(IntPtr phandler, ref CThostFtdcQryDepthMarketDataField pQryDepthMarketData, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySettlementInfo",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySettlementInfo(IntPtr phandler, ref CThostFtdcQrySettlementInfoField pQrySettlementInfo, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTransferBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTransferBank(IntPtr phandler, ref CThostFtdcQryTransferBankField pQryTransferBank, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestorPositionDetail",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestorPositionDetail(IntPtr phandler, ref CThostFtdcQryInvestorPositionDetailField pQryInvestorPositionDetail, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryNotice",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryNotice(IntPtr phandler, ref CThostFtdcQryNoticeField pQryNotice, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySettlementInfoConfirm",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySettlementInfoConfirm(IntPtr phandler, ref CThostFtdcQrySettlementInfoConfirmField pQrySettlementInfoConfirm, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestorPositionCombineDetail",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestorPositionCombineDetail(IntPtr phandler, ref CThostFtdcQryInvestorPositionCombineDetailField pQryInvestorPositionCombineDetail, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryCFMMCTradingAccountKey",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryCFMMCTradingAccountKey(IntPtr phandler, ref CThostFtdcQryCFMMCTradingAccountKeyField pQryCFMMCTradingAccountKey, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryEWarrantOffset",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryEWarrantOffset(IntPtr phandler, ref CThostFtdcQryEWarrantOffsetField pQryEWarrantOffset, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestorProductGroupMargin",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestorProductGroupMargin(IntPtr phandler, ref CThostFtdcQryInvestorProductGroupMarginField pQryInvestorProductGroupMargin, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryExchangeMarginRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryExchangeMarginRate(IntPtr phandler, ref CThostFtdcQryExchangeMarginRateField pQryExchangeMarginRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryExchangeMarginRateAdjust",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryExchangeMarginRateAdjust(IntPtr phandler, ref CThostFtdcQryExchangeMarginRateAdjustField pQryExchangeMarginRateAdjust, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryExchangeRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryExchangeRate(IntPtr phandler, ref CThostFtdcQryExchangeRateField pQryExchangeRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySecAgentACIDMap",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySecAgentACIDMap(IntPtr phandler, ref CThostFtdcQrySecAgentACIDMapField pQrySecAgentACIDMap, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryProductExchRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryProductExchRate(IntPtr phandler, ref CThostFtdcQryProductExchRateField pQryProductExchRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryProductGroup",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryProductGroup(IntPtr phandler, ref CThostFtdcQryProductGroupField pQryProductGroup, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryMMInstrumentCommissionRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryMMInstrumentCommissionRate(IntPtr phandler, ref CThostFtdcQryMMInstrumentCommissionRateField pQryMMInstrumentCommissionRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryMMOptionInstrCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryMMOptionInstrCommRate(IntPtr phandler, ref CThostFtdcQryMMOptionInstrCommRateField pQryMMOptionInstrCommRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInstrumentOrderCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInstrumentOrderCommRate(IntPtr phandler, ref CThostFtdcQryInstrumentOrderCommRateField pQryInstrumentOrderCommRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySecAgentTradingAccount",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySecAgentTradingAccount(IntPtr phandler, ref CThostFtdcQryTradingAccountField pQryTradingAccount, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySecAgentCheckMode",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySecAgentCheckMode(IntPtr phandler, ref CThostFtdcQrySecAgentCheckModeField pQrySecAgentCheckMode, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQrySecAgentTradeInfo",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQrySecAgentTradeInfo(IntPtr phandler, ref CThostFtdcQrySecAgentTradeInfoField pQrySecAgentTradeInfo, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryOptionInstrTradeCost",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryOptionInstrTradeCost(IntPtr phandler, ref CThostFtdcQryOptionInstrTradeCostField pQryOptionInstrTradeCost, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryOptionInstrCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryOptionInstrCommRate(IntPtr phandler, ref CThostFtdcQryOptionInstrCommRateField pQryOptionInstrCommRate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryExecOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryExecOrder(IntPtr phandler, ref CThostFtdcQryExecOrderField pQryExecOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryForQuote",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryForQuote(IntPtr phandler, ref CThostFtdcQryForQuoteField pQryForQuote, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryQuote",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryQuote(IntPtr phandler, ref CThostFtdcQryQuoteField pQryQuote, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryOptionSelfClose",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryOptionSelfClose(IntPtr phandler, ref CThostFtdcQryOptionSelfCloseField pQryOptionSelfClose, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestUnit",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestUnit(IntPtr phandler, ref CThostFtdcQryInvestUnitField pQryInvestUnit, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryCombInstrumentGuard",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryCombInstrumentGuard(IntPtr phandler, ref CThostFtdcQryCombInstrumentGuardField pQryCombInstrumentGuard, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryCombAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryCombAction(IntPtr phandler, ref CThostFtdcQryCombActionField pQryCombAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTransferSerial",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTransferSerial(IntPtr phandler, ref CThostFtdcQryTransferSerialField pQryTransferSerial, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryAccountregister",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryAccountregister(IntPtr phandler, ref CThostFtdcQryAccountregisterField pQryAccountregister, int nRequestID);
